test_scores/negative_dimers/features/P57078.pkl.xz
/g/alphafold/input_features/Homo_sapiens/features/P57078.pkl.xz